modified Jenkinsfile